--- a/flash.html
+++ b/flash.html
@@ -18,7 +18,8 @@
 		// the version of javascript supported
 		var jsVersion = 1.0;
 		// page to redirect to if flash isnt detected or installed
-		var noflashRedirect = "noflash.html"
+		//var noflashRedirect = "noflash.html"
+	    var noflashRedirect = "index.html"
 		// minimum width and height for flash movie, if smaller, browser will scroll
 		var minW = 990;
 		var minH = 600;		
