Corrects no flash redirect

--- a/flash.html
+++ b/flash.html
@@ -19,7 +19,7 @@
 		var jsVersion = 1.0;
 		// page to redirect to if flash isnt detected or installed
 		//var noflashRedirect = "noflash.html"
-	    var noflashRedirect = "index.html"
+	    var noflashRedirect = "flash.html"
 		// minimum width and height for flash movie, if smaller, browser will scroll
 		var minW = 990;
 		var minH = 600;		
