--- a/flash.html
+++ b/flash.html
@@ -10,7 +10,8 @@
 		// Flash detection & automatic updating to the flash 8 player if supported
 		// -----------------------------------------------------------------------------
 		// Major version of Flash required
-		var requiredMajorVersion = 8;
+		//var requiredMajorVersion = 8;
+	    var requiredMajorVersion = 0;
 		// Minor version of Flash required
 		var requiredMinorVersion = 0;
 		// Minor version of Flash required
