--- a/flash.html
+++ b/flash.html
@@ -10,8 +10,7 @@
 		// Flash detection & automatic updating to the flash 8 player if supported
 		// -----------------------------------------------------------------------------
 		// Major version of Flash required
-		//var requiredMajorVersion = 8;
-	    var requiredMajorVersion = 0;
+		var requiredMajorVersion = 8;
 		// Minor version of Flash required
 		var requiredMinorVersion = 0;
 		// Minor version of Flash required
@@ -19,8 +18,7 @@
 		// the version of javascript supported
 		var jsVersion = 1.0;
 		// page to redirect to if flash isnt detected or installed
-		//var noflashRedirect = "noflash.html"
-	    var noflashRedirect = "flash.html"
+		var noflashRedirect = "noflash.html"
 		// minimum width and height for flash movie, if smaller, browser will scroll
 		var minW = 990;
 		var minH = 600;		
